testsuite/neg/test_neg_v_matrix.osl
shader
test_neg_v_matrix (output color Cout = 0)
{
    float v_val = P[0];
    matrix  val = matrix(
        -0.8*v_val, -0.5*v_val, -0.25*v_val, -0.1*v_val,
        -0.2*v_val, -0.4*v_val, -0.65*v_val, -0.9*v_val,
        -0.7*v_val, -0.85*v_val, -0.55*v_val, -0.85*v_val,
        -0.33*v_val, -0.66*v_val, -0.77*v_val, -1.0*v_val
    );
    float v_val2 = P[1];
    matrix  val2 = matrix(
        -0.7*v_val2, -0.85*v_val2, -0.55*v_val2, -0.85*v_val2,
        -0.2*v_val2, -0.4*v_val2, -0.65*v_val2, -0.9*v_val2,
        -0.8*v_val2, -0.5*v_val2, -0.25*v_val2, -0.1*v_val2,
        -0.77*v_val2, -0.33*v_val2, -0.66*v_val2, -1.0*v_val2
    );
    matrix d = -val;
    if (int(P[0]*64)%2==0) {
        d = -val2;
    }
    d*=0.5;
    
    Cout = color(
        d[0][0] + d[0][1] + d[0][2] + d[0][3],
        d[1][0] + d[1][1] + d[1][2] + d[1][3],
        d[2][0] + d[2][1] + d[2][2] + d[2][3] +
        d[3][0] + d[3][1] + d[3][2] + d[3][3]);         
}
